[tool.poetry]
name = "bot2"
version = "0.6.2"
description = "Discord bot"
authors = ["DrSanic <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
flask = "^1.1.2"
pytz = "^2021.1"
youtube_dl = "^2021.6.6"
urllib3 = "^1.26.6"
PyNaCl = "^1.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
