[tool.poetry]
name = "bot2"
version = "0.6.2"
description = "Discord bot"
authors = ["DrSanic <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
flask = "^1.1.2"
pytz = "^2021.1"
urllib3 = "^1.26.6"
validators = "^0.18.2"
riotwatcher = "^3.1.2"
cassiopeia = "^4.0.18"
discord-components = "^2.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
